# spende

./: .gitignore  Cargo.toml  Rocket.toml  init_db.sh
data/: init.sql
front/: package.json
front/app/: app.css  root.tsx
front/app/routes/: home.tsx
src/: main.rs
src/api/: auth.rs  mod.rs  users.rs  validated_json.rs  wallets.rs
src/db/: mod.rs  users.rs  wallets.rs
