[package]
name = "spende"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
hmac = "0.12.1"
sha2 = "0.10.8"
jwt = "0.16.0"
bcrypt = "0.17.0"
snowflake_me = "0.3.1"

serde = "1.0"
rocket_cors = "0.6.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", features = ["sqlite", "macros"] }
